# prometheus-parking-lot-rs

./: .cursorrules  .gitignore  .roorules  AGENTS.md  BENCHMARKING.md  CERTIFICATION_REPORT.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  run-llm-test.sh  run-quality-gates.sh  test-build.sh
.cargo/: config.toml
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/sessions/2025/12/06/: rollout-2025-12-06T15-11-37-019af581-86ce-7d23-b9c6-0f99353d36af.jsonl
.cursor/rules/: 00-project.mdc
.e2b-template/: .bunrc  .env.example  .gitignore  ALL-7-ISSUES-FIXED.md  ALL-FIXES-COMPLETE.md  ALL-ISSUES-FIXED-FINAL.md  BUILD-NOW-FINAL.md  BUILD-NOW.md  BUN-QUICKSTART.md  BUN_COMMANDS.md  CLIPPY-RUSTFMT-FIX.md  DECISION-LOG.md  E2B-RUNTIME-ENV-FIX.md  FILES_CREATED.md  FIXES-APPLIED.md  FROM-IMAGE-API-FIX.md  ISSUE-6-FINAL-SOLUTION.md  ISSUE-8-SANDBOX-KILL-FIX.md  M1-PLATFORM-FIX.md  OPTIMIZATION-NOTES.md  PATH-FIX-APPLIED.md  PERMISSION-FIX-APPLIED.md  POST-BUILD-STEPS.md  QUICKSTART.md  README.md  READY-TO-BUILD.md  RUST-1.90.0-FEATURES.md  SETUP.md  START_HERE.md  TEST-SUCCESS-SUMMARY.md  UPGRADE-COMPLETE.md  build-template.ts  package.json  template.ts  test-template.ts  tsconfig.json
.roo/rules/: 00-project.md
benches/: README.md  queue_bench.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  Comprehensive Architectural Report Distributed Parking Management Systems and High-Performance Rust Audit Infrastructur.md  DISCUSSION.md  IMPLEMENTATION.md  PARKING_LOT.md  PLAN-CONDVAR.md  PLAN-MUTEX.md  PLAN-ONCE.md  PLAN-RWLOCK.md  README.md  SPEC-CONDVAR.md  SPEC-MUTEX.md  SPEC-ONCE.md  SPEC-RWLOCK.md  TASKS-CONDVAR.md  TASKS-MUTEX.md  TASKS-RWLOCK.md  TODO.md  WHAT_WHY.md
examples/configs/: scheduler-config.json
examples/loadtest/: README.md
scripts/: candle-vllm-tests.sh  coverage.sh
specs/001-parking-system-build/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-parking-system-build/checklists/: requirements.md
specs/001-parking-system-build/contracts/: openapi.yaml
src/: condvar.rs  lib.rs  mutex.rs  once.rs  rwlock.rs
src/builders/: mod.rs  pool_builder.rs
src/config/: mod.rs  pool.rs
src/core/: audit.rs  error.rs  executor.rs  mod.rs  resource_pool.rs  worker_pool.rs
src/core/worker_pool/: native.rs  wasm.rs
src/infra/: mod.rs
src/infra/mailbox/: memory.rs  mod.rs  postgres.rs  yaque.rs
src/infra/queue/: memory.rs  mod.rs  postgres.rs  yaque.rs
src/runtime/: api.rs  mod.rs  tokio_spawner.rs
src/util/: clock.rs  mod.rs  serde.rs  telemetry.rs
tests/: candle_vllm_suite.rs  condvar_tests.rs  llm_inference_test.rs  parking_lot_algorithm_test.rs  restart_resume.rs  worker_pool_test.rs
tests/candle_vllm/: gpu_vram_tracking.rs  graceful_degradation.rs  mod.rs  model_lifecycle.rs  priority_scheduling.rs  streaming_inference.rs
tests/integration/: README.md
tests/unit/: audit_test.rs  builders_test.rs  config_test.rs  error_test.rs  mailbox_test.rs  mod.rs  runtime_test.rs  util_test.rs
