[package]
name = "prometheus_parking_lot"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"
authors = ["Prometheus AI Team"]
description = "High-performance synchronization primitives for the Prometheus AI Platform"
documentation = "https://docs.rs/prometheus_parking_lot"
repository = "https://github.com/prometheus-ai/prometheus-parking-lot"
license = "MIT OR Apache-2.0"
keywords = ["synchronization", "mutex", "rwlock", "concurrent", "prometheus"]
categories = ["concurrency", "no-std"]

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]

[dependencies]
lock_api = "0.4"
parking_lot_core = "0.9"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["async_tokio"] }
rand = "0.9.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
futures = "0.3"

[[bench]]
name = "queue_bench"
harness = false

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
